# handsets

./: .gitattributes  .gitignore  404.html  LICENSE  README.md  bench.sh  build.sh  client.py  index.html  install.ps1  install.sh  mkdocs.yml  robots.txt  run-server.sh  sitemap.xml  stop-server.sh
.github/workflows/: docs.yml  release.yml
architecture/: index.html
benchmark/: index.html
bindings/python/: README.md  pyproject.toml
bindings/python/src/handsets/: __init__.py  errors.py  session.py
bindings/python/src/handsets.egg-info/: PKG-INFO  SOURCES.txt
blog/: index.html
blog/android-automation-for-llm-agents/: index.html
blog/android-device-cloud-for-llm-agents/: index.html
blog/android-terminal-ui/: index.html
blog/android-ui-dump-for-llms/: index.html
blog/best-appium-alternative-for-android-automation/: index.html
blog/debug-llm-android-automation-runs/: index.html
blog/fast-android-ui-automation-with-adb/: index.html
blog/handsets-vs-appium/: index.html
blog/how-to-automate-android-apps-without-root/: index.html
blog/how-to-automate-android-without-appium/: index.html
blog/how-to-control-android-phone-without-root/: index.html
blog/how-to-install-apks-on-android-without-root/: index.html
blog/how-to-manage-multiple-android-phones-without-root/: index.html
blog/how-to-run-mobile-qa-tests-without-rooted-phones/: index.html
blog/how-to-take-screenshots-on-android-without-root/: index.html
blog/how-to-test-android-apps-without-rooted-devices/: index.html
blog/mobile-rpa-android-without-root/: index.html
blog/python-android-automation-without-root/: index.html
blog/stop-wasting-tokens-on-android-automation/: index.html
blog/tap-android-buttons-by-text-command-line/: index.html
blog/tapping-android-in-5ms-vs-appium-uiautomator2/: index.html
blog/uiautomator2-alternative-for-android-automation/: index.html
blog/why-adb-screencap-is-slow/: index.html
cookbook/: index.html
docs/: CNAME  architecture.md  benchmark.md  cookbook.md  index.md  sharp-edges.md  wire.md
docs/blog/: 2026-05-22-why-adb-screencap-is-slow.md  README.md  (+1 more)
handsets-cli/: Cargo.toml
handsets-cli/src/: act.rs  adb.rs  daemon.rs  errors.rs  fan.rs  flags.rs  init.rs  json.rs  json_out.rs  main.rs  mirror.rs  output.rs  provider.rs  run_script.rs  screen.rs  selector.rs  session.rs  shell.rs  snapshot.rs  state_cache.rs  tap_text.rs  term.rs  tui.rs  ui_dump.rs  usage.rs  xml_dump.rs
handsets-tui/: Cargo.toml
handsets-tui/src/: app.rs  conn.rs  json.rs  main.rs  model.rs  ui.rs
handsets-viewer/: Cargo.toml
handsets-viewer/src/: main.rs  metal_renderer.rs  videotoolbox_decoder.rs
handsets_py/: __init__.py
overrides/: main.html
scripts/: bench-adb.sh
search/: search_index.json
sharp-edges/: index.html
wire/: index.html
(+79 files in other folders)
